wk_taa_taaqa/src/objects/Application_Monitoring_Log__c.object
<CustomObject>
    <description>This object is to monitor Order Automation specific log.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To link Application Monitoring Log with Account - for TAA Service Create Case</description>
        <inlineHelpText>To link Application Monitoring Log with Account - for TAA Service Create Case</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Monitoring Logs</relationshipLabel>
        <relationshipName>Application_Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexMethod__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>This field is created to overcome the limitation of reports: salesforce standard reporting will not show the time portion of date time fields. Thus this field allows the display in standard reporting.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_With_Seconds__c</fullName>
        <description>This field overcomes the limitation of list views on data/time fields and formulas which do not show seconds: this text field will show the seconds thus allowing us to display elapsed time to the users in the listviews</description>
        <formula>IF(
  OR(
    VALUE( MID( TEXT( CreatedDate), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( CreatedDate), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( CreatedDate), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( CreatedDate), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT(CreatedDate), 18, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( CreatedDate), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time Seconds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Order</label>
        <referenceTo>ERP_Order__c</referenceTo>
        <relationshipLabel>Application Monitoring Logs</relationshipLabel>
        <relationshipName>Application_Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MessageCode__c</fullName>
        <externalId>true</externalId>
        <label>Message Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Application Monitoring Logs</relationshipLabel>
        <relationshipName>Application_Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestData__c</fullName>
        <label>Request Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseData__c</fullName>
        <label>Response Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Monitoring Log</label>
    <nameField>
        <displayFormat>AML-{00000000}</displayFormat>
        <label>Application Monitoring Log  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Monitoring Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>